fixed header alignment above 768px

--- a/main.scss
+++ b/main.scss
@@ -1,225 +1,236 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@600&display=swap");
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Lato', sans-serif;
-    overflow-x: hidden;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Lato", sans-serif;
+  overflow-x: hidden;
 
-    a {
-        text-decoration: none;
-        color: inherit;
-    }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
-// color variables 
+// color variables
 
 $color-white: #ffffff;
 $color-black: #030000;
 $color-primary: #562e4a;
 
 nav {
-    display: none;
+  display: none;
 }
 
 header,
 main {
-    margin: 2.5rem;
+  margin: 2.5rem;
 }
 
 .header {
-    font-family: 'Montserrat', sans-serif; 
-    padding: 1rem;
-    border: solid red 2px;
+  font-family: "Montserrat", sans-serif;
+  padding: 1rem;
 
-    &__greeting {
-        display: inline-block;
-        margin-block: 1rem;
-        font-weight: 500;
-    }
+  &__greeting {
+    display: inline-block;
+    margin-block: 1rem;
+    font-weight: 500;
+  }
 
-    &__title {
-        width: 75vw;
-        margin: 3rem auto;
-        font-size: 3rem;
-    }
+  &__title {
+    width: 75vw;
+    margin: 3rem auto;
+    font-size: 3rem;
+  }
+  // desktop cartoon hidden in mobile
+  &__image {
+    display: none;
+  }
 }
 
 main {
-    h2 {
-        text-align: center;
-    }
-    line-height: 1.75;
+  h2 {
+    text-align: center;
+  }
+  line-height: 1.75;
 }
 
 .about-me {
-    
-    * {
-        margin-bottom: 3rem;
-    }
-    
-    &__image {
-        max-width: 100%;
-    }
+  * {
+    margin-bottom: 3rem;
+  }
 
-    &__title--desktop {
-        display: none;
-    }
+  &__image {
+    max-width: 100%;
+  }
+
+  &__title--desktop {
+    display: none;
+  }
 }
 
 .technical-skills {
-    margin: 4rem 1rem;
+  margin: 4rem 1rem;
 
-    &__header {
-        font-size: 1.75rem;
-    }
+  &__header {
+    font-size: 1.75rem;
+  }
 
-    &__description {
-        margin-top: 1.5rem;
-        text-align: center;
-    }
-    
-    &__icons {
-        margin: 2rem 0;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 0.5rem;
-    }
+  &__description {
+    margin-top: 1.5rem;
+    text-align: center;
+  }
 
-    &__image {
-        width: 17vw;
-        img {
-            width: 100%;
-        }
+  &__icons {
+    margin: 2rem 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 0.5rem;
+  }
+
+  &__image {
+    width: 17vw;
+    img {
+      width: 100%;
     }
+  }
 }
 
 .projects {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 
-    h2 {
-        margin: 1rem;
+  h2 {
+    margin: 1rem;
+  }
+
+  .project-card {
+    margin-bottom: 3rem;
+
+    &__image {
+      max-width: 100%;
     }
-    
-    .project-card {
-        margin-bottom: 3rem;
-        
-        &__image {
-            max-width: 100%;
-        }
-    
-        &__tech-language {
-            font-size: 1rem;
-            font-weight: bold;
-        }
-        
-        &__title {
-            font-size: 2rem;
-        }
 
-        &__description {
-            margin-block: 1rem;
-        }
-
-        .buttons {
-            display: flex;
-            gap: 1rem;
-        }
-
-        &__button {
-            background-color: $color-white;
-            color: $color-primary;
-            padding: 0.5em 1em;
-            border: $color-primary solid 2px;
-            border-radius: 5px;
-        }
+    &__tech-language {
+      font-size: 1rem;
+      font-weight: bold;
     }
+
+    &__title {
+      font-size: 2rem;
+    }
+
+    &__description {
+      margin-block: 1rem;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 1rem;
+    }
+
+    &__button {
+      background-color: $color-white;
+      color: $color-primary;
+      padding: 0.5em 1em;
+      border: $color-primary solid 2px;
+      border-radius: 5px;
+    }
+  }
 }
 
 footer {
-    background-color: $color-black;
-    color: $color-white;
-    padding: 3.5em;
-    margin-top: 5rem;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
+  background-color: $color-black;
+  color: $color-white;
+  padding: 3.5em;
+  margin-top: 5rem;
 
-    .footer-icons {
-        padding: 0.5em;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+
+  .footer-icons {
+    padding: 0.5em;
+  }
 }
 
 .center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 @media screen and (min-width: 440px) {
+  .about-me {
+    display: flex;
+    flex-direction: column;
 
-    .header {
-        padding: 0;
+    &__image {
+      max-width: 350px;
+      align-self: center;
     }
-    .about-me {
-        display: flex;
-        flex-direction: column;
-    
-        
-        &__image {
-            max-width: 350px;
-            align-self: center;
-        }
-    }
+  }
 
-    .technical-skills {
-        margin: 2rem 1rem;
-    }
+  .technical-skills {
+    margin: 2rem 1rem;
+  }
 }
 @media screen and (min-width: 768px) {
+  nav {
+    font-size: 1.25rem;
+    padding: 2em 4em;
+    display: flex;
+    justify-content: space-between;
 
-    nav {
-        font-size: 1.25rem;
-        padding: 2em 4em;
-        display: flex;
-        justify-content: space-between;
-        
-// button grouped in "nav-right" to avoid using <button> in a <ul>
-        .nav-right,
-        .nav-links {
-            display: flex;
-            gap: 1rem;
-        } 
+    // button grouped in "nav-right" to avoid using <button> in a <ul>
+    .nav-right,
+    .nav-links {
+      display: flex;
+      gap: 1rem;
     }
-    
-    .header {
-        
-        &__greeting,
-        &__title {
-            max-width: 50vw;
-            margin: 5rem;
-        }
+  }
+
+  .header {
+    display: flex;
+    gap: 3rem;
+
+    &__greeting,
+    &__title {
+      width: 40vw;
     }
 
-    .about-me {
-        flex-direction: row;
-        gap: 3rem;
+    &__intro {
+      margin-left: 3rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 1rem;
+      flex-wrap: wrap;
+      overflow: visible;
+    }
 
-        &__title {
-            display: none;
-            
-            &--desktop {
-                display: block;
-            }
-        }
+    &__image {
+      display: block;
+    }
+  }
 
-        &__image {
-            min-width: 300px;
-            height: 400px;
-            max-width: 30vw;
-        }
-    }   
+  .about-me {
+    flex-direction: row;
+    gap: 3rem;
+
+    &__title {
+      display: none;
+
+      &--desktop {
+        display: block;
+      }
+    }
+
+    &__image {
+      min-width: 300px;
+      height: 400px;
+      max-width: 30vw;
+    }
+  }
 }
